--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "md5": "^2.2.1"
+  },
+  "devDependencies": {
+    "morgan": "^1.8.1"
   }
 }
