--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js --ignore public/"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,8 @@
     "md5": "^2.2.1"
   },
   "devDependencies": {
-    "morgan": "^1.8.1"
+    "chalk": "^1.1.3",
+    "morgan": "^1.8.1",
+    "nodemon": "^1.11.0"
   }
 }
