--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
-    "md5": "^2.2.1"
+    "knex": "^0.12.7",
+    "md5": "^2.2.1",
+    "pg": "^6.1.4"
   },
   "devDependencies": {
     "chalk": "^1.1.3",
