--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "nodemon server.js --ignore public/"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "chalk": "^1.1.3",
+    "mocha": "^3.2.0",
     "morgan": "^1.8.1",
     "nodemon": "^1.11.0"
   }
