--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "clipboard": "^1.6.1",
     "express": "^4.15.2",
     "knex": "^0.12.7",
     "md5": "^2.2.1",
+    "moment": "^2.17.1",
     "pg": "^6.1.4"
   },
   "devDependencies": {
