--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "pg": "^6.1.4"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "chalk": "^1.1.3",
     "mocha": "^3.2.0",
     "morgan": "^1.8.1",
