--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "knex": "^0.12.7",
     "md5": "^2.2.1",
     "moment": "^2.17.1",
-    "pg": "^6.1.4"
+    "pg": "^6.1.4",
+    "sinon": "^2.0.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -25,6 +26,8 @@
     "chalk": "^1.1.3",
     "mocha": "^3.2.0",
     "morgan": "^1.8.1",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "sinon": "^2.0.0",
+    "sinon-chai": "^2.8.0",
   }
 }
