Refactor url dom elements to be object

--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "morgan": "^1.8.1",
     "nodemon": "^1.11.0",
     "sinon": "^2.0.0",
-    "sinon-chai": "^2.8.0",
+    "sinon-chai": "^2.8.0"
   }
 }
