--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha test/**.js",
-    "start": "nodemon server.js --ignore public/"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
