--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "chalk": "^1.1.3",
     "clipboard": "^1.6.1",
     "express": "^4.15.2",
     "knex": "^0.12.7",
     "md5": "^2.2.1",
     "moment": "^2.17.1",
+    "morgan": "^1.8.1",
+    "nodemon": "^1.11.0",
     "pg": "^6.1.4"
   },
   "devDependencies": {
