--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "chalk": "^1.1.3",
+    "eslint": "^3.18.0",
     "mocha": "^3.2.0",
     "morgan": "^1.8.1",
     "nodemon": "^1.11.0",
