--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha test/**.js",
-    "start": "node server.js",
-  
+    "start": "node server.js"
+
   },
   "keywords": [],
   "author": "",
